# tntw

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/tntw/: config.py
src/tntw/api/: main.py
src/tntw/api/v1/: database.py  dependencies.py  main.py
src/tntw/api/v1/crawlers/: moviedata.py
src/tntw/api/v1/search/: router.py  service.py
tests/: test_config.py  test_database.py
tests/integration/api/v1/: conftest.py  test_database_actions.py  test_services_available.py
tests/integration/api/v1/crawlers/: test_moviedata.py
tests/integration/api/v1/search/: test_service_actions.py
tests/unittest/api/v1/: conftest.py  test_config.py  test_database.py
tests/unittest/api/v1/crawlers/: test_movidedata.py
tests/unittest/api/v1/search/: test_router.py  test_service.py
