[tool.poetry]
name = "tntw"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "tntw", from = "src" },
]

[tool.poetry.dependencies]
python = "3.12.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # isort
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
