[tool.poetry]
name = "tntw"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "tntw", from = "src" },
]

[tool.poetry.dependencies]
python = "3.12.6"
elasticsearch = {extras = ["async"], version = "^8.15.1"}
pydantic-settings = "^2.6.1"
pytest-asyncio = "^0.24.0"
fastapi = "^0.115.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
pytest-mock = "^3.14.0"


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "needs_elasticsearch: mark a test that needs an elasticsearch instance to run.",
]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # isort
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
